# partioPRTForWindows

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: KdTree.h  Mutex.h  ParticleCaching.h  ParticleHeaders.h  ParticleSimple.h  ParticleSimpleInterleave.h  Partio.h  PartioAttribute.h  PartioEndian.h  PartioIterator.h  PartioVec3.h  ZIP.h  cmakeDefines.h  half2float.h  readers.h
src/: PRT.cpp  Particle.cpp  ParticleCaching.cpp  ParticleHeaders.cpp  ParticleIO.cpp  ParticleSimple.cpp  ParticleSimpleInterleave.cpp  ZIP.cpp
